--- a/.env.example
+++ b/.env.example
@@ -9,11 +9,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=mitradigitalpersada.com
 DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=n1573617_sipbs
+DB_USERNAME=n1573617_sipbs
+DB_PASSWORD=n1573617_sipbs
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
